--- a/index.html
+++ b/index.html
@@ -5,126 +5,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pasaulinukai Lietuva</title>
 <style>
-* {margin:0;padding:0;box-sizing:border-box;}
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  background: radial-gradient(circle at top center, #b9fbc0, #a3d5ff);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #111;
-  overflow-x: hidden;
+*{margin:0;padding:0;box-sizing:border-box;}
+body{
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  background:radial-gradient(circle at top center,#b9fbc0,#a3d5ff);
+  min-height:100vh;display:flex;flex-direction:column;align-items:center;color:#111;overflow-x:hidden;
 }
-
-.glass {
-  margin-top: 4vh;
-  background: rgba(255, 255, 255, 0.25);
-  border-radius: 28px;
-  padding: 30px 40px;
-  backdrop-filter: blur(25px) saturate(180%);
-  -webkit-backdrop-filter: blur(25px) saturate(180%);
-  border: 1px solid rgba(255,255,255,0.3);
-  box-shadow:
-    0 12px 40px rgba(0,0,0,0.25),
-    inset 0 0 40px rgba(255,255,255,0.05),
-    0 0 80px rgba(255,255,255,0.2);
-  width: 90%;
-  max-width: 850px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  text-align: center;
-  transform: translateY(20px);
-  transition: all 0.6s ease;
-  animation: floaty 5s ease-in-out infinite;
+.glass{
+  margin-top:4vh;background:rgba(255,255,255,0.25);border-radius:28px;padding:30px 40px;
+  backdrop-filter:blur(25px)saturate(180%);-webkit-backdrop-filter:blur(25px)saturate(180%);
+  border:1px solid rgba(255,255,255,0.3);box-shadow:0 12px 40px rgba(0,0,0,0.25),
+  inset 0 0 40px rgba(255,255,255,0.05),0 0 80px rgba(255,255,255,0.2);
+  width:90%;max-width:850px;display:flex;flex-direction:column;gap:20px;text-align:center;
+  transform:translateY(20px);transition:all 0.6s ease;animation:floaty 5s ease-in-out infinite;
 }
-@keyframes floaty {
-  0%, 100% { transform: translateY(0px); }
-  50% { transform: translateY(-5px); }
-}
-
-h1 {
-  font-size: 2.5rem;
-  font-weight: 700;
-  background: linear-gradient(90deg, #007aff, #00c6ff, #7b61ff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-h2.slogan { font-size: 1.2rem; color: rgba(20,20,20,0.75); }
-
-.btn-link {
-  display:inline-block;
-  margin-top:10px;
-  padding:10px 20px;
-  background:#007aff;
-  color:#fff;
-  border-radius:12px;
-  text-decoration:none;
-  font-weight:600;
-}
-
-.step {display:none;flex-direction:column;gap:15px;}
-.step.active {display:flex;}
-
-input, select, button {
-  padding:12px 16px;
-  border-radius:12px;
-  border:none;
-  font-size:1rem;
-  outline:none;
-  width:100%;
-}
-button {
-  cursor:pointer;
-  background:linear-gradient(90deg,#7bafff,#a3d5ff);
-  color:#fff;
-  font-weight:600;
-  transition:transform 0.2s ease, box-shadow 0.3s ease;
-}
-button:hover {
-  transform:scale(1.05);
-  box-shadow:0 0 20px rgba(123, 175, 255, 0.5);
-}
-.btn-row {display:flex;gap:10px;flex-wrap:wrap;justify-content:center;}
-
-.prototype-message {
-  background:rgba(255,255,255,0.3);
-  border-radius:18px;
-  padding:15px 20px;
-  backdrop-filter:blur(15px) saturate(160%);
-  -webkit-backdrop-filter:blur(15px) saturate(160%);
-  border:1px solid rgba(255,255,255,0.4);
-  font-size:1rem;
-  color:rgba(0,0,0,0.85);
-}
-
-footer {font-size:0.95rem;opacity:0.85;padding:25px;text-align:center;}
-footer p {margin:5px 0;}
+@keyframes floaty{0%,100%{transform:translateY(0)}50%{transform:translateY(-5px)}}
+h1{font-size:2.5rem;font-weight:700;background:linear-gradient(90deg,#007aff,#00c6ff,#7b61ff);
+  -webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+h2.slogan{font-size:1.2rem;color:rgba(20,20,20,0.75);}
+.btn-link{display:inline-block;margin-top:10px;padding:10px 20px;background:#007aff;color:#fff;
+  border-radius:12px;text-decoration:none;font-weight:600;}
+.step{display:none;flex-direction:column;gap:15px;}
+.step.active{display:flex;}
+input,select,button{padding:12px 16px;border-radius:12px;border:none;font-size:1rem;outline:none;width:100%;}
+button{cursor:pointer;background:linear-gradient(90deg,#7bafff,#a3d5ff);color:#fff;font-weight:600;
+  transition:transform 0.2s ease,box-shadow 0.3s ease;}
+button:hover{transform:scale(1.05);box-shadow:0 0 20px rgba(123,175,255,0.5);}
+.btn-row{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;}
+.prototype-message{background:rgba(255,255,255,0.3);border-radius:18px;padding:15px 20px;
+  backdrop-filter:blur(15px)saturate(160%);-webkit-backdrop-filter:blur(15px)saturate(160%);
+  border:1px solid rgba(255,255,255,0.4);font-size:1rem;color:rgba(0,0,0,0.85);}
+footer{font-size:0.95rem;opacity:0.85;padding:25px;text-align:center;}
+footer p{margin:5px 0;}
 </style>
 </head>
 <body>
 <div class="glass" id="glassBox">
   <h1>Pasaulinukai Lietuva</h1>
   <h2 class="slogan">Pasaulis ant tavo raktų</h2>
-
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSXqhfAI4mGfqAsmqDxWZZ6PimNVjhN1tgeo_fBjUA6UMjjg/viewform?usp=dialog"
      target="_blank" class="btn-link">Užpildyti per Google Forms</a>
-
   <p>Arba tęskite užsakymą svetainėje:</p>
 
   <!-- Step 1 -->
   <div class="step active" id="step1">
     <label for="type">Pasirinkite tipą:</label>
     <select id="type">
-      <option value="3d">3D spausdinimas (€12)</option>
-      <option value="wood">Medžio graviravimas (€4.99)</option>
+      <option value="3D spausdinimas">3D spausdinimas (€12)</option>
+      <option value="Medžio graviravimas">Medžio graviravimas (€4.99)</option>
     </select>
     <label for="object">Įveskite objektą:</label>
     <input type="text" id="object" placeholder="Įveskite figūrą ar gyvūną">
-    <div class="btn-row">
-      <button onclick="validateAndNext(2)">Toliau</button>
-    </div>
+    <div class="btn-row"><button onclick="validateAndNext(2)">Toliau</button></div>
   </div>
 
   <!-- Step 2 -->
@@ -141,30 +73,37 @@ footer p {margin:5px 0;}
   <div class="step" id="step3">
     <label for="color">Pasirinkite spalvą:</label>
     <select id="color">
-      <option value="pilka">Pilka (numatyta)</option>
-      <option value="raudona">Raudona</option>
-      <option value="mėlyna">Mėlyna</option>
-      <option value="žalia">Žalia</option>
-      <option value="juoda">Juoda</option>
-      <option value="balta">Balta</option>
-      <option value="artimiausia">Artimiausia pasirinktam objektui</option>
+      <option value="Pilka">Pilka (numatyta)</option>
+      <option value="Raudona">Raudona</option>
+      <option value="Mėlyna">Mėlyna</option>
+      <option value="Žalia">Žalia</option>
+      <option value="Juoda">Juoda</option>
+      <option value="Balta">Balta</option>
+      <option value="Artimiausia">Artimiausia pasirinktam objektui</option>
     </select>
     <div class="btn-row">
       <button onclick="prevStep(2)">Atgal</button>
-      <button onclick="nextStep(4)">Baigti</button>
+      <button onclick="showSummary()">Baigti</button>
     </div>
   </div>
 
-  <!-- Step 4 (Summary) -->
+  <!-- Step 4 -->
   <div class="step" id="step4">
     <h3>Užsakymo santrauka</h3>
     <p id="summaryText"></p>
     <form id="orderForm" action="https://formspree.io/f/mgvnyvbv" method="POST">
-      <input type="hidden" name="type" id="formType">
-      <input type="hidden" name="object" id="formObject">
-      <input type="hidden" name="customText" id="formText">
-      <input type="hidden" name="color" id="formColor">
-      <input type="hidden" name="price" id="formPrice">
+      <!-- Keep these visible to ensure Formspree sends them -->
+      <label>Tipas:</label>
+      <input type="text" name="type" id="formType" readonly>
+      <label>Objektas:</label>
+      <input type="text" name="object" id="formObject" readonly>
+      <label>Tekstas:</label>
+      <input type="text" name="customText" id="formText" readonly>
+      <label>Spalva:</label>
+      <input type="text" name="color" id="formColor" readonly>
+      <label>Kaina (€):</label>
+      <input type="text" name="price" id="formPrice" readonly>
+
       <label>Pilnas vardas:</label>
       <input type="text" name="fullname" required>
       <label>El. paštas:</label>
@@ -178,9 +117,7 @@ footer p {margin:5px 0;}
       </select>
       <button type="submit">Siųsti užklausą</button>
     </form>
-    <div class="btn-row">
-      <button onclick="resetOrder()">Pradėti naują</button>
-    </div>
+    <div class="btn-row"><button onclick="resetOrder()">Pradėti naują</button></div>
   </div>
 
   <div class="prototype-message">
@@ -188,67 +125,50 @@ footer p {margin:5px 0;}
   </div>
 </div>
 
-<footer>
-  <p>All rights reserved Pasaulinukai 2025</p>
-</footer>
+<footer><p>All rights reserved Pasaulinukai 2025</p></footer>
 
 <script>
-let currentStep = 1;
-let order = { type:"", object:"", text:"", color:"", price:0 };
+let currentStep=1;
+let order={type:"",object:"",text:"",color:"",price:0};
 
-function nextStep(step) {
-  document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-  document.getElementById('step' + step).classList.add('active');
-  currentStep = step;
+function nextStep(step){
+  document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));
+  document.getElementById('step'+step).classList.add('active');
+  currentStep=step;
 }
-
-function prevStep(step) {
-  document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-  document.getElementById('step' + step).classList.add('active');
-  currentStep = step;
+function prevStep(step){
+  document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));
+  document.getElementById('step'+step).classList.add('active');
+  currentStep=step;
 }
-
-function validateAndNext(step) {
-  const type = document.getElementById("type").value;
-  const obj = document.getElementById("object").value.trim();
-  if (!obj) {
-    alert("Įveskite objektą prieš tęsiant.");
-    return;
-  }
-  order.type = type;
-  order.object = obj;
-  nextStep(step);
+function validateAndNext(step){
+  const type=document.getElementById("type").value;
+  const obj=document.getElementById("object").value.trim();
+  if(!obj){alert("Įveskite objektą prieš tęsiant.");return;}
+  order.type=type;order.object=obj;nextStep(step);
 }
-
-function calculatePrice() {
-  order.price = (order.type === "3d") ? 12.00 : 4.99;
-}
-
-function showSummary() {
-  order.text = document.getElementById("customText").value.trim();
-  order.color = document.getElementById("color").value;
+function calculatePrice(){order.price=(order.type.includes("3D"))?12.00:4.99;}
+function showSummary(){
+  order.text=document.getElementById("customText").value.trim();
+  order.color=document.getElementById("color").value;
   calculatePrice();
-  const summary = `
-  <strong>Tipas:</strong> ${order.type === "3d" ? "3D spausdinimas" : "Medžio graviravimas"}<br>
+  const summary=`
+  <strong>Tipas:</strong> ${order.type}<br>
   <strong>Objektas:</strong> ${order.object}<br>
-  <strong>Tekstas:</strong> ${order.text || "—"}<br>
+  <strong>Tekstas:</strong> ${order.text||"—"}<br>
   <strong>Spalva:</strong> ${order.color}<br>
   <strong>Kaina:</strong> €${order.price.toFixed(2)}
   `;
-  document.getElementById("summaryText").innerHTML = summary;
-
-  // Fill hidden fields for Formspree
-  document.getElementById("formType").value = order.type;
-  document.getElementById("formObject").value = order.object;
-  document.getElementById("formText").value = order.text;
-  document.getElementById("formColor").value = order.color;
-  document.getElementById("formPrice").value = order.price.toFixed(2);
-
+  document.getElementById("summaryText").innerHTML=summary;
+  document.getElementById("formType").value=order.type;
+  document.getElementById("formObject").value=order.object;
+  document.getElementById("formText").value=order.text;
+  document.getElementById("formColor").value=order.color;
+  document.getElementById("formPrice").value=order.price.toFixed(2);
   nextStep(4);
 }
-
-function resetOrder() {
-  order = { type:"", object:"", text:"", color:"", price:0 };
+function resetOrder(){
+  order={type:"",object:"",text:"",color:"",price:0};
   document.getElementById("orderForm").reset();
   nextStep(1);
 }
